fix(components): add missing padding to FlipAutocomplete list

--- a/packages/swirl-components/src/components/flip-autocomplete/flip-autocomplete.css
+++ b/packages/swirl-components/src/components/flip-autocomplete/flip-autocomplete.css
@@ -16,6 +16,8 @@
   position: fixed;
   z-index: var(--s-z-40);
   overflow: hidden;
+  padding-top: var(--s-space-8);
+  padding-bottom: var(--s-space-8);
   border-radius: var(--s-border-radius-sm);
   background-color: var(--s-surface-overlay-default);
   box-shadow: var(--s-shadow-level-1);
